[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/pixelEnemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/error_007.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.5, 9 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -12.5, -12.5156, 12.4844, -12.5, 12.5, 12.4922, -12.5078, 12.4766, -12.5, -12.5078 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="enemy-touch" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy-touch"]
scale = Vector2( 1.4, 1.4 )
shape = SubResource( 1 )

[node name="enemyKill" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyKill"]
position = Vector2( -0.5, -22 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="EnemyAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="enemy-touch" to="." method="_on_enemytouch_body_entered"]
[connection signal="body_entered" from="enemyKill" to="." method="_on_enemyKill_body_entered"]
